--- a/app/containers/HomePage/HomePage.css
+++ b/app/containers/HomePage/HomePage.css
@@ -86,27 +86,25 @@
 /* home */
 
 .background {
-  width: 100vw;
-  height: 78vh;
+  max-width: 100vw;
 }
-
-.img {
-  background-image: url('https://readmycourse.com/Images/home-page-bg-graphics.svg');
-  width: 100%;
-  opacity: 0.6;
-  position: absolute;
+.background img {
+  width: 100vw;
+  height: 50rem;
+  opacity: 0.4;
 }
 .overall {
   position: relative;
   text-align: left;
-  margin-left: 2rem;
+  margin-left: 5rem;
   opacity: 1 !important;
 }
 .textcontect {
-  margin-top: 6rem;
-  font-size: 50px;
+  height: 20rem;
+  padding-top: 4rem;
+  font-size: 60px;
   font-weight: bold;
-  width: 50rem;
+  width: 80%;
   color: black;
 }
 /* #B83B5E */
@@ -116,17 +114,93 @@
 .bookBtn {
   background-color: brown !important;
   color: white !important;
-  margin-top: 2rem;
-  border-radius: 20px;
-  width: 13rem;
-  height: 3rem;
-  font-weight: bold !important;
-  font-size: 18px !important;
+  border-radius: 80px !important;
+  width: 17rem;
+  height: 4rem;
+  font-size: 25px !important;
 }
-.ratecontect {
-  margin-top: 2rem;
+.curve {
+  margin-top: 0rem;
+  position: absolute;
+  width: 100vw;
+  opacity: 0.4;
+  height: 50px;
+  background: linear-gradient(#e9e0eb,#c9a4cc);
+  background-color: #9900aa;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
 }
-.ratecontect span {
+.subtittle{ 
+  padding-top: 4rem;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  color: black;
+}
+.subtittle span{
   color: #9900aa;
-  font-weight: 100;
+}
+.textopacity{
+  font-size: 18px;
+  color: gray;
+}
+.PrivateTabIndicator-colorPrimary-6 {
+    background: none !important;
+}
+.logos img{
+  zoom: 0.3;
+  width: 25rem;
+  margin-left: 2rem;
+  margin-right: 5rem;
+  border: none !important;
+}
+.logoscroll{
+  margin: auto;
+  width: 55vw;
+}
+.curvetop {
+  margin-top: 0rem;
+  position: absolute;
+  width: 100vw;
+  height: auto;
+  background: linear-gradient(#f1d7f3,#f2e9f3,#ffffff,#ffffff,#f2e9f3,#f1d7f3);
+  background-color: #9900aa;
+  margin-bottom: 2rem;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+}
+.texttittle{
+  font-size: 30px;
+  font-weight: 900;
+  color: #9900aa;
+  text-align: center;
+  margin-top: 2rem;
+}
+.textopacityalign{
+  color: gray;
+  text-align: center;
+}
+.icons{
+  text-align: center;
+}
+.textalign{
+  color: gray !important;
+  width: 10rem;
+  margin: auto;
+}
+.textalign div{
+  color: rgb(58, 57, 57) !important;
+}
+.livetittle{
+  color: #aa004f;
+  text-align: center;
+  font-size: 20px;
+}
+.circle{
+  color: #000000;
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%;
 }
