--- a/app/containers/CourseDetails/CourseDetails.css
+++ b/app/containers/CourseDetails/CourseDetails.css
@@ -43,6 +43,21 @@ body{
     opacity: 0.8;
     font-weight: 600;
 }
+.star-Rating2{
+    margin-left: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 0 !important;
+}
+.reviews{
+    margin-top: 2px !important;
+    font-size: 15px;
+    opacity: 0.8;
+    font-weight: 600;
+}
+.point-reviews{
+    font-size: 50px;
+    margin-left: 1rem;
+}
 .fees-content{
     font-size: 20px;
     color: white;
@@ -100,13 +115,123 @@ body{
 .name{
     font-size: 20px;
     color: rgb(75, 75, 75);
-    margin: 1rem 2rem;
+    margin: 0rem 2rem;
+}
+.name-main-div{
+    margin: 1rem;
 }
 .name span{
     color: #9900aa;
 }
+.name-under{
+    margin: 0.5rem 2rem 0 2rem;
+}
+.class-tittle{
+    margin: 0.5rem 2rem 0 2rem;
+}
+.Sample-videos-tittle{
+    text-align: center;
+    color: #9900aa;
+    font-size: 35px;
+    font-weight: 900;
+    margin-top: 6rem;
+    margin-bottom: 2rem;
+}
+.tab-videos{
+    width: 75vw;
+    margin: auto;
+    margin-bottom: 2rem;
+}
+.tab{
+    background: none !important;
+    padding-top: 8.5rem;
+    height: 50vh;
+}
+.video-tabs{
+    display: flex;
+    border: none !important;
+}
+.PrivateTabIndicator-colorPrimary-141 {
+    background: none !important;
+}
+.videos-card{
+    width: 20vw;
+    height: 40vh;
+    margin-right: 2.2rem;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(136, 136, 136);
+    border-radius: 10px;
+    text-align: center;
+}
+.videos-card img{
+    width: 19vw;
+    margin-top: 5px;
+    height: 20vh;
+    border: 1px solid rgb(182, 182, 182);
+    border-radius: 7px;
+}
 
-
+.Sample-videos-tittle2{
+    text-align: center;
+    color: #9900aa;
+    font-size: 35px;
+    font-weight: 900;
+    margin-top: 2rem;
+}
+.rating-div{
+    margin-top: 2rem;
+}
+.tittle-content{
+  color: black;
+  font-size: 30px;
+  font-weight: 900;
+  text-align: center;
+  margin-top: 2rem;
+}
+.rating-message img{
+    width: 5vw;
+    border-radius: 50%;
+    height: 10vh;
+}
+.first-div{
+    display: flex;
+}
+.first-div2{
+    margin-top: 1rem;
+    display: flex;
+}
+.rating-message-name{
+ color: rgb(146, 146, 146);
+ font-size: 19px;
+ margin: 1rem 2rem;
+}
+.reviews-post-date{
+    margin-left: 1rem;
+    margin-top: 5px;
+    color: rgb(146, 146, 146);
+}
+.reviews-feedback{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    color: rgb(146, 146, 146);
+}
+.weeks-table{
+    margin-top: 1rem !important;
+    margin: auto;
+    border: 3px solid #9900aa;
+    width: 70vw;
+    min-height: 50vh;
+    border-radius: 10px;
+    padding: 1rem;
+}
+.week-bar{
+    width: 100%;
+    height: 8vh;
+    box-shadow: 2px 2px 20px gray;
+    border: 2px solid rgb(172, 172, 172);
+    background-color: white;
+    border-radius: 6px;
+}
 
 @media only screen and (max-width: 1000px) {
     .topmaindiv-img{
@@ -116,4 +241,32 @@ body{
         width: 98.5vw;
         border-bottom-right-radius: 0px !important;
     }
+    .MuiTabs-scrollButtonsDesktop {
+        display: block !important;
+    }
+
+  .MuiTabScrollButton-root {
+    margin: auto !important;
+  }
+  .video-logoscroll {
+    background: none;
+    margin: auto;
+    width: 65vw !important;
+    margin-top: 1rem;
+    margin-bottom: 5rem;
+  }
+  .MuiSvgIcon-fontSizeSmall {
+    font-size: 2.25rem !important;
+    height: 286px;
+}
+.videos-card{
+    width: 40vw;
+    margin-left: 0;
+    margin-right: 2rem;
+    text-align: center;
+}
+.videos-card img{
+    width: 15vw;
+    height: 20vh;
+}
 }
