--- a/app/containers/HomePage/HomePage.css
+++ b/app/containers/HomePage/HomePage.css
@@ -1,6 +1,9 @@
 .menubar {
   margin-right: 50px !important;
 }
+.menu {
+  margin-left: 8px !important;
+}
 .MuiGrid-spacing-xs-1 {
   margin: 0;
   max-width: 99.1vw;
@@ -12,6 +15,19 @@
   margin-top: 0.5rem;
   height: 50px !important;
   width: 50px !important;
+  background-color: rgb(255 255 255) !important;
+  border: 1px solid #dedbdb !important;
+  border-radius: 10px !important;
+}
+.hamBurgerMenu div {
+  background-color: grey !important;
+}
+.showMenuItems {
+  background-color: rgb(255 255 255) !important;
+  color: black !important;
+  box-shadow: 3px 3px 13px grey !important;
+  border-top-right-radius: 20px !important;
+  border-bottom-right-radius: 20px !important;
 }
 .menuItems {
   margin-top: 0.6rem !important;
@@ -44,7 +60,8 @@
   width: 95%;
 }
 .search {
-  margin-top: 0.5rem;
+  height: 2.5rem;
+  margin-top: 0.4rem !important;
   display: flex;
   background-color: white;
   border-radius: 10px;
@@ -150,11 +167,20 @@
   display: flex;
   justify-content: space-around;
 }
+.card-buttom Button:hover {
+  background-color: #b83b5e;
+}
 .card-buttom Button {
-  background-color: #f3cddb;
-  border: 1px solid #c9a4cc;
+  background-color: #b83b5e;
+  border-radius: 20px;
+  border: 1px solid #b8b8bd;
+  color: white !important;
   margin: 10px 0rem;
-  width: 8rem;
+  width: 9rem;
+}
+.more-details Button {
+  color: black !important;
+  background-color: #f8dfe6 !important;
 }
 
 /* home */
@@ -188,13 +214,14 @@
   background-color: #b83b5e !important;
   color: white !important;
   border-radius: 80px !important;
-  width: 19rem;
+  width: 22rem;
   height: 4rem;
   font-size: 25px !important;
+  padding: 0 3% !important;
 }
 
 .subtittle {
-  padding-top: 13rem;
+  padding-top: 32vh;
   text-align: center;
   font-size: 40px;
   font-weight: bold;
@@ -212,18 +239,18 @@
 }
 .logos img {
   zoom: 0.3;
-  width: 20rem;
+  width: 30rem;
   height: 27rem;
-  margin-left: 7rem;
-  margin-right: 7rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
   border: none !important;
 }
 .logos2 img {
   zoom: 0.3;
-  width: 20rem;
+  width: 30rem;
   height: 27rem;
-  margin-left: 7rem;
-  margin-right: 7rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
   border: none !important;
 }
 .logoscroll {
@@ -235,16 +262,23 @@
 .curve-mid {
   width: 100%;
   min-height: 50rem;
-  max-height: 63rem;
+  max-height: 85rem;
   position: absolute;
   z-index: 0;
+}
+.features {
+  margin-top: 1rem;
+}
+.course-card-main {
+  margin: 0 6%;
 }
 .join-text {
   font-size: 30px;
   font-weight: 900;
   color: #9900aa;
   text-align: center;
-  margin-top: 13rem;
+  margin-top: 85vh;
+  margin-bottom: 1rem;
 }
 .texttittle {
   font-size: 30px;
@@ -255,8 +289,8 @@
 
 .texttittle1 {
   position: relative;
-  font-size: 30px;
-  padding-top: 5rem;
+  font-size: 40px;
+  padding-top: 6rem;
   font-weight: 900;
   color: #9900aa;
   text-align: center;
@@ -271,10 +305,11 @@
 .textopacityalign {
   position: relative;
   color: gray;
-  font-size: 18px;
+  font-size: 20px;
   text-align: center;
 }
 .icons {
+  margin-top: 2rem;
   position: relative;
   text-align: center;
   padding: 0 6%;
@@ -283,10 +318,14 @@
   zoom: 0.2;
   margin-top: 2rem;
 }
+.benefit img {
+  width: 70%;
+  height: 75rem;
+}
 .textalign {
   color: gray !important;
-  width: 10rem;
   font-size: 18px;
+  padding: 0 15%;
   margin: auto;
 }
 
@@ -303,21 +342,22 @@
   position: relative;
   color: #aa004f;
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
 }
 .circleflex {
   display: flex;
   margin-top: 2rem;
   justify-content: center;
 }
+.circleflex .circle {
+  margin: 0 1rem;
+}
 .circle img {
-  margin-left: 1rem;
   opacity: 0.9;
-  width: 6rem;
-  height: 6rem;
-  /* border: 1px solid #baadbb; */
+  width: 50rem;
+  background-color: #d7a3dd4a;
+  height: 45rem;
   border-radius: 50%;
-  padding-bottom: 10px;
 }
 .text-help {
   font-size: 30px;
@@ -350,7 +390,7 @@
   box-shadow: 0px 10px 20px rgb(202, 202, 202);
   width: 30rem;
   border-radius: 8px;
-  height: 15rem !important;
+  height: 13rem !important;
   padding: 1rem;
   margin-left: 2rem;
 }
@@ -376,13 +416,19 @@
 .bottomtab {
   background-color: #fbf6fc;
   margin-top: 5rem;
+  padding: 1rem 3%;
 }
 .gridalign {
-  margin: 5rem;
+  margin: 0rem;
+}
+.gridalign div {
+  padding: 0 0 1rem 0;
+  cursor: pointer;
 }
 .bottomtabtittles {
   font-size: 18px;
   font-weight: 900;
+  margin-top: 1rem;
   padding-bottom: 1rem;
 }
 .mailinput input {
@@ -391,11 +437,12 @@
   border: none !important;
   height: 3rem;
   text-align: center;
+  width: 16vw;
 }
 .mailinput Button {
   background-color: #aa004f;
   width: 16vw;
-  margin-top: 2rem;
+  margin-top: 1rem;
   color: white;
 }
 .mailinput Button:hover {
@@ -410,7 +457,7 @@
 }
 .imagecertificate img {
   width: 50vw;
-  border: 1px solid black;
+  border: 1px solid rgb(209, 209, 209);
   box-shadow: 10px 10px 10px rgb(179, 179, 179);
 }
 .maeg {
@@ -432,13 +479,15 @@
 .join {
   margin-top: 0.4rem !important;
   width: 9rem;
-  font-size: 1.1rem;
-  margin-right: 1rem !important;
-  border: 1px solid #b83b5e !important;
+  font-size: 1.2rem !important;
+  cursor: pointer;
+  background-color: none !important;
+  border: none !important;
+  border: none !important;
   height: 2.3rem !important;
-  color: #b83b5e !important;
 }
 .login {
+  margin-right: 1rem !important;
   height: 2.3rem !important;
   margin-top: 0.4rem !important;
   font-size: 1.1rem;
@@ -458,7 +507,7 @@
   margin-top: 2rem;
 }
 .chart-sub-cont1 {
-  margin-left: 4rem;
+  margin-left: 2rem;
 }
 .chart-sub-cont2 {
   margin-left: 2rem;
@@ -466,9 +515,31 @@
 .massegebox1 {
   margin-right: 1rem;
 }
-
+.msg-mob {
+  display: none;
+}
 
 @media only screen and (max-width: 600px) {
+  .chatcard {
+    display: none !important;
+    background-color: white !important;
+    width: 90vw;
+    border-radius: 20px !important;
+    padding-left: 2px !important;
+    box-shadow: 2px 2px 10px grey !important;
+  }
+  .msg-mob {
+    display: block;
+    width: 3rem;
+    height: 3rem;
+    text-align: center;
+    margin: auto;
+  }
+  .msg-mob img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+  }
   .overall {
     text-align: center;
     height: 10rem;
@@ -530,9 +601,9 @@
     padding: 0 1rem;
   }
   .massegebox {
-    height: 10rem !important;
     overflow: auto;
     margin-left: 1rem;
+    margin-top: 1rem;
   }
   .chatcard img {
     width: 8rem;
@@ -540,7 +611,7 @@
     border-radius: 50%;
   }
   .massegebox1 {
-    margin-right: 1rem;
+    margin-right: 0rem;
   }
   .chart-sub-cont1 {
     margin-left: 0rem;
@@ -587,7 +658,7 @@
     padding-top: 5rem;
   }
   .cardmain {
-    width: 80%;
+    width: 83%;
     min-height: 5vh;
     margin-left: 2.5rem;
   }
@@ -599,25 +670,45 @@
     margin-bottom: 5rem;
   }
   .logos img {
-    width: 20.5rem;
-    margin-left: 6rem;
-    margin-right: 3rem;
+    width: 30rem;
+    height: 35rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
   }
   .logos2 img {
     width: 20.5rem;
-    margin-left: 3.5rem;
-    margin-right: 3rem;
+    margin-left: 0rem;
+    margin-right: 1rem;
   }
   .MuiTabScrollButton-root {
     margin: auto !important;
   }
   .curve-mid {
-    min-height: 145rem !important;
+    min-height: 425vh !important;
   }
   .texttittle1 {
     padding-top: 10rem !important;
   }
   .join-text {
-    margin-top: 30rem;
+    margin-top: 170vh;
+  }
+  .message {
+    height: 18rem !important;
+    margin-left: 0 !important;
+  }
+  .course-card-main {
+    margin: 0;
+  }
+  .card-buttom {
+    margin: auto;
+    align-items: center;
+    flex-direction: column;
+  }
+  .logoscroll {
+    width: 90vw;
+    margin-bottom: 0;
+  }
+  .search {
+    height: 3.2rem;
   }
 }
